@@ -3,5 +3,6 @@ INSTALL
 MANIFEST
 Makefile.PL
 lib/LEOCHARRE/Dir.pm
+lib/LEOCHARRE/Dir.pod
 t/00.t
 META.yml                                 Module meta-data (added by MakeMaker)
