@@ -1,16 +1,23 @@
 --- #YAML:1.0
-name:                LEOCHARRE-Dir
-version:             1.06
-abstract:            ~
-license:             ~
-author:              ~
-generated_by:        ExtUtils::MakeMaker version 6.44
-distribution_type:   module
-requires:     
-    Carp:                          1
-    Cwd:                           3
-    Exporter:                      5
-    Test::Simple:                  0
+name:               LEOCHARRE-Dir
+version:            1.07
+abstract:           ~
+author:  []
+license:            perl
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
+requires:
+    Carp:          1
+    Cwd:           3
+    Exporter:      5
+    File::Path:    2.07
+    Test::Simple:  0
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.48
 meta-spec:
-    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
-    version: 1.3
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
